[tool.poetry]
name = "persona"
version = "0.1.0"
description = ""
authors = ["sakkke <84666033+sakkke@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
py-cord = "^2.4.1"
openai = "^1.6.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
